--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-faer-core     = { git = "https://github.com/sarah-ek/faer-rs" }
-faer-lu       = "0.9"
-faer-qr       = "0.9"
-faer-cholesky = "0.9"
-faer-svd      = "0.9"
+faer-core     = "0.10"
+faer-lu       = "0.10"
+faer-qr       = "0.10"
+faer-cholesky = "0.10"
+faer-svd      = "0.10"
 simba = "0.8.1"
 rand = "0.8.5"
 nalgebra = "0.32.3"
